added disabled classes and disabled upcoming algos

--- a/index.html
+++ b/index.html
@@ -25,12 +25,26 @@
             <div class=" algo-container">
                 <label for="sorting-algos">Select Algorithm</label>
                 <select name="sorting-algos" id="drop-menu" size="1">
-                    <option style="font-family: Arial, Helvetica, sans-serif" value="Bubble-Sort">Bubble Sort</option>
-                    <option style="font-family: Arial, Helvetica, sans-serif" value="Quick-sort">Quick Sort</option>
-                    <option style="font-family: Arial, Helvetica, sans-serif" value="Merge-Sort">Merge Sort</option>
-                    <option style="font-family: Arial, Helvetica, sans-serif" value="a-Sort">c Sort</option>
-                    <option style="font-family: Arial, Helvetica, sans-serif" value="b-Sort">b Sort</option>
-                    <option style="font-family: Arial, Helvetica, sans-serif" value="c-Sort">c Sort</option>
+                    <option class="coming-soon" style="font-family: Arial, Helvetica, sans-serif" value="Bubble-Sort">
+                        Bubble Sort
+                    </option>
+                    <option disabled=true class="coming-soon" style="font-family: Arial, Helvetica, sans-serif"
+                        value="Quick-sort">
+                        Quick Sort
+                    </option>
+                    <option disabled=true class="coming-soon" style="font-family: Arial, Helvetica, sans-serif"
+                        value="Merge-Sort">
+                        Merge Sort
+                    </option>
+                    <option disabled=true class="coming-soon" style="font-family: Arial, Helvetica, sans-serif"
+                        value="a-Sort">a Sort
+                    </option>
+                    <option disabled=true class="coming-soon" style="font-family: Arial, Helvetica, sans-serif"
+                        value="b-Sort">b Sort
+                    </option>
+                    <option disabled=true class="coming-soon" style="font-family: Arial, Helvetica, sans-serif"
+                        value="c-Sort">c Sort
+                    </option>
                 </select>
             </div>
             <div class="sort-btn">
